# flow123d

./: .gitignore  .gitmodules  .gitmodules_https  .travis.yml  BCplot  CHANGES  CHANGES.md  CMakeLists.txt  CTestConfig.cmake  DONE  GPL3.UTF8  HOWTO_Win7-x64  HOWTO_win64  LICENCE.UTF8  LICENSE  Licence  Makefile  ODE_richards.m  PROBLEMY  README  README.md  TODO  astyle.style  authors  call_hier.txt  check_dates.sh  config.cmake.template  config.default.cmake  conv_plot.sh  convergency.sh  dg_asm_plots_out.html  eclipse.formating.profile.xml  eclipse_code_style.xml  env.sh  host_table.json  hydro_plot  input.template.anal.txt  input.template.txt  input.txt  intel_warning.txt  (+17 more)
doc/: CMakeLists.txt  INSTALL.md  LICENCE.short  LICENSE  README  flow_json.xml  parlibs_install  pets_options_3.8.3  petsc_options_help  source_documentation.html
doc/Code Style/: coding_rules.ltx
doc/con_syntax/: con_sublime.sublime-package
doc/design/: field_evaluate.md  python_interface.md
doc/doxy/: flow123d.doxy  flow123d.doxy.in  flow123d.html  makefile  short.doxy
doc/old_doc/: Upravy flow123d variable density.doc  concentration.txt  inifile07-08-31_vardens.txt  msh_update.txt  mtr_update.txt  output_type_2.txt  transport_bcd.txt
doc/reference_manual/: 01_column.tex  02_column_transport.tex  03_tunnel.tex  04_frac_diffusion.tex  05_frac_sorption.tex  06_frac_dualpor.tex  07_heat.tex  CMakeLists.txt  F123-titulni.tex  JSON_input.tex  abstract_models.tex  add_doc_replace.sh  add_to_ref_doc.txt  advection_diffusion_reaction.tex  bcd_10.tex  chemistry.tex  convection.tex  darcy_flow.tex  decay.tex  dg.tex  flow123d.tex  flow123d_doc.bib  flow123d_doc.kilepr  flow123d_doc.tex  flow_doc.sty  flow_ini.tex  flow_version.tex  getting_started.tex  heat.tex  input_files.tex  input_reference.tex  lumped_mh.tex  make_pdf.sh  make_tex.sh  mechanics.tex  msh_20.tex  mtr_10.tex  ngh_10.tex  numerical.tex  output.tex  (+16 more)
doc/use_cases/: README.md
src/: CMakeLists.txt  Cti_ichNew.c  boundaries.cc  btc.cc  calculation.cc  che_semchem.c  concentrations.cc  constantdb.cc  convert.cc  darcy_flow_mh.cc  darcy_flow_mh_output.cc  doxy_dummy_defs.hh  edges.cc  elements.cc  equation.cc  equation.hh  field_p0.cc  field_p0.hh  hashes.cc  hc_explicit_sequential.cc  hc_explicit_sequential.hh  initials.cc  interfaceN.c  io_namehandler.cc  io_namehandler.hh  la_linsys.cc  la_schur.cc  local_matrix.cc  main.cc  main.h  main_doc.hh  makefile  materials.cc  materials.hh  math_fce.cc  mesh.cc  msh_gmshreader.cc  neighbours.cc  nodes.cc  output.cc  (+28 more)
src/_parsers/: muParser.cpp  muParser.h  muParserBase.cpp  muParserBase.h  muParserBytecode.cpp  muParserBytecode.h  muParserCallback.cpp  muParserCallback.h  muParserDLL.cpp  muParserDLL.h  muParserDef.h  muParserError.cpp  muParserError.h  muParserInt.cpp  muParserInt.h  muParserStack.h  muParserTemplateMagic.h  muParserTest.cpp  muParserTest.h  muParserToken.h  muParserTokenReader.cpp  muParserTokenReader.h
src/bp_fris/: bp_fris.cpp  hyperplane.cpp  hyperplane.h  intersections.cpp  intersections.h  plucker.cpp  plucker.h  point.cpp  point.h  simplex.cpp  simplex.h  spoint.cpp  spoint.h  vector.cpp  vector.h
src/coupling/: application.cc  application.hh  assembly_base.hh  assembly_hm.hh  assembly_internals.hh  balance.cc  balance.hh  equation.cc  equation.hh  generic_assembly.hh  hc_explicit_sequential.cc  hc_explicit_sequential.hh  hm_iterative.cc  hm_iterative.hh  time_governor.cc  time_governor.hh  time_marks.cc  time_marks.hh
src/dead_code/: btc.cc  btc.h  convert.cc  output_tmp.cc  ppfcs.cc  ppfcs.h  reaction.cc  reaction.h  solve.cc  solve.h
src/decay/: Linear_reaction.cc  Linear_reaction.h  decay.cc  decay.h  linear_reaction.cc  linear_reaction.hh
src/fast_intersection/: Intersection0D.cpp  Intersection0D.h  Intersection1D.cpp  Intersection1D.h  IntersectionLocal.cpp  IntersectionLocal.h  PPBase.cpp  PPBase.h  ProlongationPoint.cpp  ProlongationPoint.h  ProlongationPoint1D.cpp  ProlongationPoint1D.h  ProlongationPoint3D.cpp  ProlongationPoint3D.h  inspect_elements.cpp  inspect_elements.h  inspectelements.cpp  inspectelements.h  intersection_local.cpp  intersection_local.h  plan  prolongation_point.cpp  prolongation_point.h
src/fem/: arena_resource.hh  arena_vec.hh  dh_cell_accessor.hh  discrete_space.cc  discrete_space.hh  dof_cell_accessor.hh  dof_element_accessor.hh  dofhandler.cc  dofhandler.hh  eigen_tools.hh  element_cache_map.cc  element_cache_map.hh  element_values.cc  element_values.hh  eval_points.cc  eval_points.hh  eval_points_data.hh  eval_subset.cc  eval_subset.hh  eval_subset_points.cc  eval_subset_points.hh  fe.hh  fe_disc.hh  fe_p.cc  fe_p.hh  fe_p0_xfem.hh  fe_rt.cc  fe_rt.hh  fe_rt_xfem.hh  fe_rt_xfem_single.hh  fe_system.cc  fe_system.hh  fe_values.cc  fe_values.hh  fe_values_map.hh  fe_values_views.cc  fe_values_views.hh  fem_tools.hh  finite_element.cc  finite_element.hh  (+33 more)
src/fields/: assembly_observe.hh  assembly_output.hh  bc_field.cc  bc_field.hh  bc_multi_field.cc  bc_multi_field.hh  composed_quadrature.cc  composed_quadrature.hh  dfs_topo_sort.hh  equation_output.cc  equation_output.hh  eval_points.cc  eval_points.hh  eval_subset.cc  eval_subset.hh  factory.hh  fe_value_handler.cc  fe_value_handler.hh  field.cc  field.hh  field.impl.hh  (+86 more)
test_units/: CMakeLists.txt  HOWTO_TEST  README  gtest_flow.cc  gtest_mpi.cc  gtest_mpi.hh  gtest_mpi_output.hh  gtest_overview  gtest_throw_what.hh  makefile  time_governor_test.cpp
unit_tests/: CMakeLists.txt  HOWTO_TEST  arma_expect.hh  check_runtime_and_compilation.sh  compilation_report_generator.sh  compilation_reporter.py  compile_and_report.sh  compile_define_test.sh  compile_reporter.py  expand_placeholders_test  flow_gtest.hh  flow_gtest_mpi.hh  generate_compile_xml.py  generate_default_xml.py  gtest_mpi.hh  jenkins_jobs_template.yaml  list_subdirs.cmake  mesh_constructor.hh  profiler_info_18.04.26_07-25-03.log.json  profiler_info_18.04.26_07-25-19.log.json  profiler_info_18.04.26_07-25-45.log.json  reader_root_interface.hh  runtime_and_compilation_reporter.py  test_list  unit_list
(+10880 files in other folders)
